made the nav bar

--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <html>
     <head>
-
+        <title>Home | my.stevenscollege.edu</title>
+        <link rel="stylesheet" href="style.css">
     </head>
+
     <body>
         <header>
-            
+            <div class="login-header">
+                <ion-icon class="header-icon search-icon" name="search"></ion-icon>
+                <div class="profile-iconbox">
+                <div class="prof-border">
+                    <ion-icon class="header-icon" name="person"></ion-icon>
+                </div>
+                </div>
+            </div>
+
+            <div class="page-header">
+                <a href="#" class="nav-1">home</a>
+                <a href="#" class="nav-2">academics</a>
+                <a href="#" class="nav-3">campus Life</a>
+                <a href="#" class="nav-4">atudent Services</a>
+                <a href="#" class="nav-5">my pages</a>
+                <div class="nav-filler"></div>
+            </div>
         </header>
+        <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
     </body>
 </html>
