Updated Campus Life page

--- a/campuslife.html
+++ b/campuslife.html
@@ -24,6 +24,17 @@
                 <a href="" class="tab-header-3">Calendar</a>
                 <a href="" class="calendar-3">View full calendar</a>
                 <p>November 5 — December 5, 2021</p>
+                <p class="filler-3" style="font-size: 1rem;">
+                    Fri, Nov 5th <br>
+                    12:00 pm - 4:30 pmClass Session (Technical Requirements and DataStructures (CSET 115-))- at GREEN GREEN 10 <br>
+                    11:55 pm - 11:55 pmPHYS 106 G - Sound Quiz is due <br>
+                    11:55 pm - 11:55 pmPHYS 106 G - Sounds Lab is due <br>
+                    Mon, Nov 8th <br>
+                    12:00 pm - 4:30 pmClass Session (software Project I (CSET 120-))- at GREEN GREEN 10 <br>
+                    Tue, Nov 9th <br>
+                    7:00 pm - 8:15 pmClass Session (Video Games as Literature (ENG 227-B))- at ONLIN ONLIN <br>
+                    +25 more...calendar events <br>
+                </p>
             </div>
             <div class="left3-3">
                 <a href="" class="tab-header-3">Bookmarks</a>
@@ -58,6 +69,11 @@
             </div>
         </div>
     </section>
+    <footer>
+        <a href="#" class="footer">Privacy policy</a>
+        <a href="#" class="footer">About us</a>
+        <a href="#" class="footer">Contact us</a>
+    </footer>
 
     <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 </body>
