--- a/campuslife.html
+++ b/campuslife.html
@@ -5,6 +5,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+
+        <div class="login-header">
+            <ion-icon class="header-icon search-icon" name="search"></ion-icon>
+            <div class="profile-iconbox">
+            <div class="prof-border">
+                <ion-icon class="header-icon" name="person"></ion-icon>
+            </div>
+            </div>
+        </div>
+
+        <div class="page-header">
+            <a href="#" class="nav-1">home</a>
+            <a href="#" class="nav-2">academics</a>
+            <a href="#" class="nav-3">campus Life</a>
+            <a href="#" class="nav-4">student Services</a>
+            <a href="#" class="nav-5">my pages</a>
+            <div class="nav-filler"></div>
+        </div>
+    </header>
     <p class="here-3">You are here: <a href="">Campus Life > Home</a></p>
     <section class="title-3">
         <h1><a href="">Campus Life</a></h1>
