--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="#" class="nav-1">home</a>
                 <a href="#" class="nav-2">academics</a>
                 <a href="#" class="nav-3">campus Life</a>
-                <a href="#" class="nav-4">atudent Services</a>
+                <a href="#" class="nav-4">student Services</a>
                 <a href="#" class="nav-5">my pages</a>
                 <div class="nav-filler"></div>
             </div>
