--- a/Academics.html
+++ b/Academics.html
@@ -47,8 +47,10 @@
             </div>
             <div class="right-flex-parent-2">
                 <div class="announcements-2">
-                    <p class="course-catalog-title-2">Announcements</p>
-                    <p>You have no incoming announcements.</p>
+                    <div class="announcements-title-2">
+                        <p>Announcements</p>
+                    </div>
+                    <p class="notice-2">You have no incoming announcements.</p>
                 </div>
                 <div class="calender-2">
 
