--- a/student-services.html
+++ b/student-services.html
@@ -299,6 +299,11 @@
                 
             </div>
         </section>
+        <footer>
+            <a href="#" class="footer">Privacy policy</a>
+            <a href="#" class="footer">About us</a>
+            <a href="#" class="footer">Contact us</a>
+        </footer>
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     </body>
 </html>
