--- a/index.html
+++ b/index.html
@@ -1,10 +1,62 @@
 <html>
     <head>
-
+        <title>Home | my.stevenscollege.edu</title>
+        <link rel="stylesheet" href="style.css">
     </head>
+
     <body>
         <header>
-            
+            <div class="login-header">
+                <ion-icon class="header-icon search-icon" name="search"></ion-icon>
+                <div class="profile-iconbox">
+                <div class="prof-border">
+                    <ion-icon class="header-icon" name="person"></ion-icon>
+                </div>
+                </div>
+            </div>
+
+            <div class="page-header">
+                <a href="#" class="nav-1">home</a>
+                <a href="#" class="nav-2">academics</a>
+                <a href="#" class="nav-3">campus Life</a>
+                <a href="#" class="nav-4">atudent Services</a>
+                <a href="#" class="nav-5">my pages</a>
+            </div>
         </header>
+
+        <section>
+
+            <div class="address1">
+                <p class="addressDirection1">You are here:</p>
+                <a href="#">Home</a>
+                <span>></span>
+                <a href="#">Home</a>
+            </div>
+
+            <p class="intro-link"><a href="#">my.stevenscollege.edu</a></p>
+
+            <div class="section-1">
+                <div class="section-1-tool">
+                    <div class="top-col-box-1"><a href="#">General Announcements</a></div>
+                    <div class="top-col-content-1"></div>
+                    <div class="top-col-box-1"><a href="#">Campus Announcements</a></div>
+                    <div class="bottom-col-content-1"></div>
+                </div>
+
+                    <div class="section-1-tool">
+                        <div class="top-col-box-2"><a href="#">Online Resources</a></div>
+                        <div class="top-col-content-2"></div>
+                        <div class="top-col-box-2"><a href="#">Community Service</a></div>
+                        <div class="bottom-col-content-2"></div>
+                        <div class="top-col-box-2"><a href="#">Campus Calendar</a></div>
+                        <div class="top-col-content-2"></div>
+                        <div class="top-col-box-2"><a href="#">TSCT Announcements</a></div>
+                        <div class="bottom-col-content-2"></div>
+                        <div class="top-col-box-2"><a href="#">TSCT On Social Media</a></div>
+                        <div class="bottom-col-content-2"></div>
+                    </div>
+            </div>
+        </section>
+        <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
     </body>
 </html>
